# gesture-app

./: .gitignore  INSTALL.md  package-lock.json  package.json  pnpm-lock.yaml  prd.json  progress.txt  tsconfig.json  vite.config.ts
.github/workflows/: tauri-macos.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/: index.ts
src/components/: Chapter2.tsx  Chapter3.tsx  Chapter4.tsx  GestureManager.tsx  SkeletonManager.tsx
